Replace gitFirst() with git(0)